--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 body {
-<<<<<<< HEAD
   background-color: rgb(0, 0, 0);
   padding: 20px;
 }
@@ -73,10 +72,13 @@ body {
   margin-left: 550px;
   position: absolute;
 }
-.button {
+.startButton {
+  background-color: #000;
+  color: #fbb040;
   margin-top: 330px;
   margin-left: 210px;
   border: none;
+  font-size: 24px;
 }
 .game {
   margin: 40px;
@@ -85,84 +87,8 @@ body {
   color: #00b0ad;
 }
 h1 {
-  margin-top: 100px;
+  position: absolute;
+  margin-top: -15px;
   z-index: 4;
+  font-size: 69px;
 }
-=======
-    background-color: rgb(0, 0, 0);
-    padding: 20px;
-  }
-  .board {
-    margin: 100px 160px;
-    width: calc(100vh - 240px);
-    /* max-width: calc(100vw - 40px); */
-    display: grid;
-    background-color: white;
-    grid-gap: 10px;
-    border-radius: 40px;
-    padding: 20px;
-    grid-template-columns: repeat(4, 1fr);
-  }
-  .card-outer {
-    perspective: 1000px;
-    height: calc((100vh - 290px) / 4);
-    max-height: calc((100vw - 90px) / 4);
-  }
-  .card {
-    border-radius: 5px;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transform: rotateY(180deg);
-    transform-style: preserve-3d;
-    transition: all 0.3s;
-  }
-  .card .front,
-  .card .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-  .card .front img {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .card .back {
-    background-color: #d9d9d9;
-    transform: rotateY(180deg);
-    border-radius: 24px;
-  }
-  .card-outer.flipped .card {
-    transform: rotateY(0);
-    border-radius: 24px;
-  }
-  
-  .stats {
-    width: 400px;
-    z-index: 1;
-    text-align: center;
-    color: #fff;
-    padding: 20px 0;
-    font-size: 2rem;
-    position: absolute;
-    left: 590px;
-    top: 172px;
-  }
-  .statsBackroundImg {
-    width: 500px;
-    height: 500px;
-    z-index: 0;
-    margin-left: 544px;
-    margin-top: 50px;
-  }
-  .statsPane {
-    margin-left: 400px;
-    position: absolute;
-  }
-  .button {
-    margin-top: 330px;
-    margin-left: 210px;
-  }
->>>>>>> a53dc2621ad49e7a2cf9eba8d5d4602832d6938c
