--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
   border-radius: 40px;
   padding: 20px;
   grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
 }
 .card-outer {
   perspective: 1000px;
@@ -34,11 +35,14 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
 }
 .card .front img {
   display: block;
   max-width: 100%;
   max-height: 100%;
+  border-radius: 30px;
 }
 .card .back {
   background-color: #d9d9d9;
